h/static/styles/common.scss
@import 'compass/typography/text/force-wrap';
@import 'compass/layout/stretching';

@import 'base';
@import 'forms';
@import 'spinner';
@import 'responsive';
@import 'threads';
@import 'yui_grid';
@import 'simple-search';
@import 'tags-input';


$base-font-size: 16px;
$base-line-height: 26px;
$sans-font-family: "Source Sans Pro", $sans-font-family;
$serif-font-family: "Merriweather", $serif-font-family;
$headings-color: $text-color;


//ELEMENT STYLES////////////////////////////////
a {
  color: $link-color;
  &:hover { color: $link-color-hover; }
  text-decoration: none;
}

body {
  background-color: $body-background;
  color: $text-color;
  line-height: 1.4;
}

p {
  -webkit-hyphens: auto;
     -moz-hyphens: auto;
          hyphens: auto;

  & + p {
    margin: 1em 0 0;
  }
}

em { font-style: italic; }

html {
  font-size: $base-font-size;
  line-height: $base-line-height;

  @include yui_grid();

  @include respond-to(handhelds) {
    @include yui_grid('h-');
  }

  @include respond-to(wide-handhelds) {
    @include yui_grid('wh-');
  }

  @include respond-to(tablets) {
    @include yui_grid('t-');
  }

  @include respond-to(desktops) {
    @include yui_grid('d-');
  }
}

h1, h2, h3, h4, h5, h6 {
  font-family: $sans-font-family;
  color: $headings-color;
}

h1 {
  font-size: 2em;
  margin: .67em 0;
}

h2 {
  font-size: 1.5em;
  margin-top: 15px;
}

h3 {
  font-size: 1.25em;
  margin: .83em 0;
}

h4 {
  font-size: 1.15em;
  margin: .83em 0;
}

h5 {
  font-size: 1.05em;
  margin: 1.5em 0;
}

h6 {
  font-size: 1em;
  margin: 1.67em 0;
}

//MCRANDOM////////////////////////////////

.alert-block {
  span.errorMsgLbl { @extend .visuallyhidden; }
  span.errorMsg { @extend .visuallyhidden; }
}

.small {
  font-size: .8em;
}

//Candidate for cleanup
.btn-link {
  @include box-shadow(none);
  @include reset-box-model;
  background: none;
  background-color: transparent;
  text-decoration: underline;
  border: none;
  cursor: pointer;
  color: $link-color;
  position: static;

  &:hover, &:focus, &.js-focus, &.js-hover {
    color: $link-color-hover;
  }
}

.red {
  color: $hypothered;
}

.pull-left {
  float: left;
}

.pull-right {
  float: right;
}


//CLOSER////////////////////////////////
.close {
  cursor: pointer;
  float: right;
  line-height: 1.4;
  opacity: .6;
  &:active, &:hover {
    opacity: 1;
  }
}



//FORM RELATED////////////////////////////////
.form-horizontal {
  display: inline-block;
  .controls, .control-group, div, fieldset,
  input, button, select, textarea {
    display: inline-block;
  }
  select, textarea, input, button {
    margin: .5em 0;
  }
}

.form-inline .control-group { margin-bottom: 0; }

.form-vertical {
  select, textarea, input, button {
    display: block;
    // margin-top: .75em;
  }
}

.req {
  display: none;
}

.visuallyhidden {
  position: absolute;
  overflow: hidden;
  clip: rect(0 0 0 0);
  height: 1px; width: 1px;
  margin: -1px; padding: 0; border: 0;
}



//EXCERPT////////////////////////////////
.excerpt {
  margin-bottom: 1em;
  position: relative;

  .annotation-quote {
    margin-bottom: 0;
  }

  .more, .less {
    font-size: .9em;
    font-family: $sans-font-family;
    display: block;
    text-align: right;
  }
}

.annotation-quote {
  color: $gray;
  font-family: $serif-font-family;
  font-size: 1em;
  margin-bottom: 1em;
  padding: 0 .615em;
  border-left: 3px solid $gray-lighter;
}


//DROPDOWNS////////////////////////////////
.dropdown {
  position: relative;
  span {
    cursor: pointer;
    &:hover {
      color: black;
    }
  }
}

.dropdown-toggle {
  cursor: pointer;

  &:active {
    outline: 0;
  }
}

.dropdown-menu {
  @include rotateX(90deg);
  background: $white;
  border: solid 1px $gray-lighter;
  margin-top: .8em;
  top: 100%;
  float: left;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  z-index: 2;

  li:not(.ng-hide) {
    cursor: pointer;
    line-height: 1;
    text-align: left;
    padding: .5em;
    white-space: nowrap;

    &:hover {
      color: black;
    }

    &.selected {
      color: black;
      font-weight: 600;
      line-height: 1;
      &:before {
        font-size: .7em;
      }
    }
    &.inactive {
      font-weight: 400;
      color: $gray-lighter;
      cursor: default;
      &:hover {
        color: $gray-lighter;
      }
      & * {
        cursor: default;
      }
    }

    & + li {
      border-top: dotted 1px $gray-lighter;
    }
  }

  a {
    color: inherit;
  }

  // These psuedo-elements add the speech bubble tail / triangle.
  &:before, &:after {
    // http://www.red-team-design.com/css-diagonal-borders-still-not-rendering-properly-on-firefox
    @include scale(.9999);
    border-color: rgba(0, 0, 0, 0);

    border-style: solid;
    border-width: 0 7px 6px 7px;
    content: '';
    position: absolute;
    height: 0;
    left: 0;
    width: 0;
  }

  &:before {
    border-bottom-color: $gray-lighter;
    top: -7px;
  }

  &:after {
    border-bottom-color: $white;
    top: -6px;
    z-index: 3;
  }

  // Aligns the dropdown menu to right
  &.pull-right {
    right: 0;
    left: auto;
    text-align: right;

    // Align the tail
    &:before, &:after {
      left: auto;
      right: 0;
    }
  }
}

.open {
  & > .dropdown-menu {
    @include smallshadow;
    @include rotateX(0);
    opacity: 1;
    pointer-events: auto;
  }
}

//TABS////////////////////////////////
.nav-tabs {
  margin-bottom: 10px;

  & > li {
    display: inline-block;
    line-height: 1;

    a {
      font-family: $sans-font-family;
      font-weight: bold;
      color: $gray-dark;
      cursor: pointer;
      border-bottom: 3px solid transparent;
      padding-left: 2 / 13 * 1em;
      padding-right: 2 / 13 * 1em;
      padding-bottom: 1 / 13 * 1em;

      &:hover {
        color: $link-color-hover;
      }
    }

    &:active a {
      position: relative;
      top: 1 / 13 * 1em;
    }


    &.active:active a {
      top: 0;
    }

    &.active a {
      border-color: $gray-lighter;
    }

    &:before {
      content: "/";
      margin: 0 .75em;
    }

    &:first-child:before {
      content: none;
    }
  }
}

.tab-content {
  line-height: 1.4;
  padding: 1em;

  .tab-pane {
    display: none;
    &.active {
      display: inherit !important;
    }
  }
}


//PAPER////////////////////////////////
//Provides the white background upon which items sit
.paper {
  background: $white;
  border: solid 1px $gray-lighter;
  border-radius: 2px;
  padding: 1em;
}


//ANNOTATION////////////////////////////////
//This is for everything that is formatted as an annotation.
.annotation {
  @include pie-clearfix;
  font-family: $sans-font-family;
  position: relative;

  &:hover fuzzytime a, &:hover .reply-count {
    color: $link-color;
  }

  .magicontrol.dropdown {
    top: 4px;
  }

  fuzzytime {
    line-height: 2;

    a {
      color: $text-color;
      &:hover { color: $link-color-hover; }
      &:focus { outline: 0; }
    }
  }

  .reply-count {
    color: $text-color;
    &:hover { color: $link-color-hover; }
    &:focus { outline: 0; }
  }

  .user {
    font-weight: bold;
    font-size: 1.1em;
    &:hover {
      color: $link-color-hover;
      cursor: pointer;
      text-decoration: underline;
    }
  }

  .styled-text {
    // This class applies to the annotation body.

    div {
      clear: both;
      margin: .25em 0;
      #{elements-of-type(inline)}, #{headings()}, p {
        @include force-wrap;
      }
    }
 
    h1, h2, h3, h4, h5, h6 {
      margin: 0px;
    }

    ol {
      list-style-type: decimal;
      padding-left: 1.5em;
    }

    ul {
      list-style-type: disc;
      padding-left: 1.5em;
    }

    img {
      display: block;
      max-width: 100%;
    }

    textarea {
      min-height: 8em;
      width: 100%;
      resize: vertical;
    }

    code {
      display: block;
      font-family: monospace,monospace;
      padding: 0 0.615em;
      border: 1px solid #DDD;
      background-color: #F8F8F8;
      border-radius: 3px;
    }
    
    blockquote {
      @extend .annotation-quote;
    }
  }

  .buttonbar {
    @include pie-clearfix;
    margin: .25em 0;

    .btn {
      margin-right: .5em;
    }
  }

  .tip {
    @extend .small;
    float: right;
  }

  .quote {
    font-style: italic
  }
}

// Temporary hack until sidebar and displayer are unified
.annotation-displayer {
  .user {
    &:hover {
      color: $link-color-hover;
      cursor: pointer;
      text-decoration: underline;
    }
  }
}

.icon-markdown {
  color: $gray-lighter;
  font-size: 16px;
  position: absolute;
  top: 1px;
  left: 117px;
} 


//MAGICONTROL////////////////////////////////
.magicontrol {
  @include transition(opacity);
  @include transition-duration(.15s);
  margin: 0 .4em;
  opacity: 0;

  &.open, :hover > & {
    @include transition-duration(.15s);
    opacity: 1;
  }
}

.share-dialog {
  display: none;

  a {
    float: left;
    line-height: 1.4;
    margin-right: .5em;
    vertical-align: middle;
  }

  div {
    overflow: hidden;
  }

  input {
    padding: 0;
    width: 100%;
  }
}

.stream-list {
  & > * {
    margin-bottom: .72em;
  }

  .card-emphasis {
    @include box-shadow(6px 6px 8px -2px $gray-light);
  }
}

//SEARCH HIGHLIGHTS////////////////////////////////
.search-hl-active {
  background: $highlight-color;
  box-shadow:3px 3px 4px -1px #999999;
  &::-moz-selection {
    background: $highlight-color;
    box-shadow:3px 3px 4px #999999;
  }
  &::-moz-selection, &::-moz-window-inactive, &::window-inactive {
    background: $highlight-color;
    box-shadow:3px 3px 4px #999999;
  }
  &::selection, &::selection:window-inactive {
    background: $highlight-color;
    box-shadow:3px 3px 4px #999999;
  }
}

pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }

// View and Sort tabs ////////////////////
.viewsort {
  @include single-transition(top, .25s);
  @include transition-timing-function(cubic-bezier(0, 1, .55, 1));
  width: 100%;
  text-align: center;
  position: fixed;
  top: 29px;
  right: 0;
  z-index: 4;

  &.ng-hide {
    @include transition-timing-function(cubic-bezier(1, .55, 0, 1));
    top: 0;
    display:block!important;
    overflow: hidden;
  }
}

.viewsort > .dropdown {
  @include smallshadow(0);
  border-bottom-right-radius: 24px 72px;
  border-bottom-left-radius: 24px 72px;
  font-family: $sans-font-family;
  background: $white;
  border: solid 1px $gray-lighter;
  padding: 0 10px;
  margin: 0 3px;
  display: inline-block;

  .dropdown-menu {
    margin-top: 0;

    &:before, &:after {
      display: none;
    }
  }
}

